Added birthday message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Static repo</title>
 </head>
 <body>
+<div>Love you!</div>
 	<img src="./images/map1.png">
 	<img src="./images/map2.png">
 </body>
